fix: paragraph gap

--- a/styles/pages/_blog-page.scss
+++ b/styles/pages/_blog-page.scss
@@ -112,7 +112,7 @@ article {
   }
 
   & p {
-    @apply py-5 text-lg;
+    @apply py-4 text-lg;
   }
   & img {
     @apply mx-auto my-5 w-full object-cover  md:w-1/2;
